<resources>
    <string name="app_name">Social Story</string>
    <string name="title_welcome_page">Selamat datang di SocialStory!</string>
    <string name="message_welcome_page">Gabung dengan grup, tunjukkan minat, terhubung ke teman secara global di SocialStory. Tetap terhubung dengan orang-orang yang Anda cintai di SocialStory. Ikuti topik menarik. Bagikan memori Anda. Terhubung dengan keluarga. Cari teman. Mengobrol online.</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="copyright">© 2022 SocialStory</string>
    <string name="title_register_page">Daftarkan dirimu agar dapat terhubung!</string>
    <string name="title_login_page">Sudah siap untuk bersosialisasi?</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading</string>
    <string name="logout">Logout</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
</resources>